Remove static variable lookups from instances